--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
@@ -35,6 +36,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/helper.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
