--- a/package.json
+++ b/package.json
@@ -19,9 +19,18 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "vue-template-compiler": "^2.6.11",
         "webpack": "^4.42.0"
     },
     "dependencies": {
+        "ant-design-vue": "^1.5.0",
+        "axios": "^0.19.2",
+        "vue": "^2.6.11",
+        "vue-froala-wysiwyg": "^3.1.0",
+        "vue-i18n": "^8.16.0",
+        "vue-router": "^3.1.5",
+        "vue-spinner": "^1.0.3",
+        "vuex": "^3.1.2",
         "webpack-spritesmith": "^1.1.0"
     }
 }
